--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "art-detailing-service",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://stringgg-crypto.github.io/site1",
   "type": "module",
   "scripts": {
     "dev": "vite",
